<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Box Proxy</string>
    <string name="status_stopped">已停止</string>
    <string name="status_running">运行中</string>
    <string name="status_starting">启动中…</string>
    <string name="status_stopping">停止中…</string>
    <string name="status_error">错误</string>
    <string name="btn_start">启动</string>
    <string name="btn_stop">停止</string>
    <string name="btn_restart">重启</string>
    <string name="btn_emergency">紧急关闭</string>
    <string name="tab_home">主页</string>
    <string name="tab_files">文件</string>
    <string name="tab_settings">设置</string>
    <string name="tab_logs">日志</string>
    <string name="need_root">本应用需要 Root 权限才能运行</string>
    <string name="select_core">选择核心</string>
    <string name="select_config">选择配置</string>
    <string name="start_command">启动命令</string>
    <string name="start_command_hint">例如: ./sing-box run -c config.yaml</string>
    <string name="upload_core">上传核心</string>
    <string name="upload_config">上传配置</string>
    <string name="no_core">尚未上传核心文件</string>
    <string name="no_config">尚未上传配置文件</string>
</resources>
